# rdumper

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.fast  LICENSE  PROMPT.md  README.md  build-docker.sh  docker-compose.yml  dockerhub-push.fish  package.json  test_regex.rs
.github/: README.md
.github/workflows/: docker-build.yml  security.yml  tests.yml
backend/: Cargo.toml  README_TEST_DATA.md
backend/src/: main.rs  tests.rs
backend/src/api/: backups.rs  dashboard.rs  database_configs.rs  jobs.rs  logs.rs  mod.rs  system.rs  tasks.rs  worker.rs
backend/src/db/: mod.rs
backend/src/models/: backup.rs  database_config.rs  job.rs  log.rs  mod.rs  progress.rs  task.rs
backend/src/services/: backup_process.rs  filesystem_backup.rs  filesystem_backup_fixed.rs  filesystem_backup_old.rs  logging.rs  mod.rs  mydumper.rs  progress_tracker.rs  scheduler.rs  task_worker.rs
backend/src/tests/: backup_process_test.rs
backend/test/: backup_process_test.rs  setup_test_data.sh  setup_test_data.sql  test_parse
backend/tests/: backup_process_test.rs
frontend/: .env.prod  ENVIRONMENT.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/public/assets/: config.js
frontend/src/: App.vue  main.js
frontend/src/assets/: main.css
frontend/src/components/: GlobalLoading.vue  ThemeSelect.vue
frontend/src/stores/: loading.js
test/: README.md  test_backup_scan  test_backup_scan.rs  test_filesystem_service  test_filesystem_service.rs  test_metadata.rs  test_scan  test_scan.rs
test_cron/src/: main.rs
(+7 files in other folders)
