[package]
name = "rdumper-backend"
version = "0.1.6"
edition = "2021"

[dependencies]
axum = "0.7"
axum-extra = { version = "0.9", features = ["multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "mysql", "chrono", "uuid"] }
tokio = { version = "1.0", features = ["full"] }
# cron = "0.15"  # Commented out due to parsing issues
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1.0"
tempfile = "3.0"
